all activities added

--- a/drk.html
+++ b/drk.html
@@ -19,30 +19,22 @@
 
     <title>Gallery deeksha</title>
   </head>
-  <body>
+  <body >
     <!-- text -->
     <main class="main">
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
-        <h2 class="section__title">The Desh Ka Rakhwaala initiative lorem20</h2>
+        <h2 class="section__title">The Desh Ka Rakhwaala initiative</h2>
         <span class="section__subtitle">Gratitude to the armed forces</span>
         <div class="about__container container grid">
           <img src="./gallery/img/DKRPOSTER.jpg" alt="" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
-              Gratitude cannot be forced, it can only be felt As India crossed
-              her 75 years of Independence in August 2021, there was gratitude
-              which remained to be shown to the Indian Armed Forces for their
-              immense contribution throughout the years to our Motherland.
-              Hence, The Student Council at AMS P Obul Reddy Public School took
-              pride in launching the *Desh Ka Rakhwaala* Initiative where we
-              requested each individual/team/department to come forward and
-              submit letters of gratitude and small artwroks to the saviours,
-              which were in turn sent by postal mail to Udhampur Cantonment,
-              Line of Control, Indo-Pak Border, Rajasthan, India. The initiative
-              was a huge success receiving a total of 200+ responses from
-              students and Management.
+              As India crossed her 75 years of Independence in August 2021, there was gratitude which remained to be shown to the Indian Armed Forces for their immense contribution throughout the years to our Motherland. 
+
+              Hence, The Student Council at AMS P Obul Reddy Public School took pride in launching the *Desh Ka Rakhwaala* Initiative where we requested each individual/team/department to come forward and submit letters of gratitude and small artwroks to the saviours, which were in turn sent by postal mail to Udhampur Cantonment, Line of Control, Indo-Pak Border, Rajasthan, India. The initiative was a huge success receiving a total of 200+ responses from students and Management. 
+
             </p>
             <!-- <div class="about__info">
               <div>
@@ -67,25 +59,29 @@
                 >
               </div>
             </div> -->
-            <div class="about__buttons">
+            <!-- <div class="about__buttons">
               <a
                 download=""
                 href="./assets/pdf/Alexa-Cv.pdf"
                 class="button button--flex"
                 >Download CV<i class="uil uil-download-alt button__icon"></i
               ></a>
-            </div>
+            </div> -->
           </div>
         </div>
 
         <div class="text__container">
           <p class="about__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque rerum
-            laudantium minus dolorem quibusdam maiores nam illo nulla totam. Quo
-            possimus placeat id necessitatibus aut? Voluptate consequuntur
-            inventore eos laborum commodi sequi rem natus. Cum, vel laborum
-            deleniti consequatur aliquid, iste placeat, ut vitae enim quasi
-            suscipit sequi incidunt optio?
+            A filtering team of our board of student editors tuned and handwrote the received letters.  Meetings were carried out to distribute tasks and allocate responsibilities for the responses we received. I led the team for voluntary positions offering students opportunities to harness their skills  <br>
+• Handwriter
+Duty: Handwriting all the letters in doc/other digital formats
+<br>
+• Proof-Reader
+Duty: Checking all letters and rejecting ones with a negative emotion or too many mistakes 
+<br>
+• Formatter
+Duty: Covert all kinds of formats into PDFs.
+
           </p>
         </div>
 
@@ -137,9 +133,9 @@
       </div>
 
 
-      <div class="wrapper-iframe">
-		    <div class="iframe">
-			    <iframe src="./gallery/img/drkvid.MP4" /></iframe>
+      <div class="wrapper-iframe" >
+		    <div class="iframe" >
+			    <iframe src="./gallery/img/drkvid.MP4" ></iframe>
 		    </div>
       </div>
 
