--- a/gallery.html
+++ b/gallery.html
@@ -15,10 +15,38 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./gallery/css/styles.css" />
+    <link rel="stylesheet" href="./gallery/css/drk.css" />
 
-    <title>Gallery deeksha</title>
+
+    <title>Aquaponics deeksha</title>
   </head>
   <body>
+
+    <main class="main">
+      <!--==================== ABOUT ====================-->
+      <section class="about section" id="about">
+        <h2 class="section__title">REINVENTING GROWTH WITH AQUA LIFE </h2>
+        <!-- <span class="section__subtitle">Gratitude to the armed forces</span> -->
+       
+
+        <div class="text__container">
+          <p class="about__description">
+            Growing plants in a water-reliant tank setup as against the earthly touch of soil is what Aquaponics is all about. The plants receive nourishment from the fecal pellets of aquatic species rich in micronutrients apart from sunlight. They are placed in tubs connected with little streams through pipelines.
+
+ As a group of four, my team and I took up the task of growing plants in 4 tubs which were associated with a pond of water lilies and about six species of fish. The plants flourished on receiving optimal amount of water, sunlight, nutrients supplied by the aquatic species and electricity to pump, filter and oxygenate the water in the pond. The pond accommodates young fish which require regular intake of food pellets. Spawn is added to the pond in order to replace the grown fish and retain stability of the system.
+
+For a period of four to five weeks, the growth of the plants was thoroughly examined and measurements of the stalk and leaves of each plant were recorded. Pictures of the plants were snapped at every stage of their life cycle. The flowers bloomed in a healthy inflorescence in some plants whereas the plants that were less exposed to sunlight were stunted in growth. All life on earth is bottled sunshine indeed ! 
+
+Aquaponics proves to be an eco-friendly and ecological asset in promoting the growth of aquatic life through culture medium and ensuring an year-round adequate yield of fresh vegetables/ fruits. It supports self-sufficient living and reduces the planet’s carbon footprint as it is independent of land usage and thereby minimises development activities.
+A detailed account of growth, analysis and comparison with other farming methods was furnished in a report and the highlights were emphasised through a presentation.
+
+
+          </p>
+        </div>
+
+        
+      </section>
+    </main>
     <!--==================== Gallery ====================-->
 
     <div class="container__for__gallery">
@@ -32,7 +60,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img1.png"
+                src="./gallery/img/aqua/1.svg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -46,7 +74,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img2.png"
+                src="./gallery/img/aqua/2.svg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -60,7 +88,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img3.png"
+                src="./gallery/img/aqua/3.svg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -74,7 +102,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img4.png"
+                src="./gallery/img/aqua/4.svg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -88,7 +116,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img5.png"
+                src="./gallery/img/aqua/5.svg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -108,7 +136,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img1.png"
+                  src="./gallery/img/aqua/1.svg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -118,7 +146,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img2.png"
+                  src="./gallery/img/aqua/2.svg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -128,7 +156,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img3.png"
+                  src="./gallery/img/aqua/3.svg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -138,7 +166,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img4.png"
+                  src="./gallery/img/aqua/4.svg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -148,7 +176,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img5.png"
+                  src="./gallery/img/aqua/5.svg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -173,7 +201,7 @@
 
     </div>
 
-<div class="gallery">
+    <div class="gallery">
       <!-- =============== SWIPER GALLERY CARDS 2 =============== -->
 
       <div class="swiper gallery-cards2">
@@ -181,7 +209,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img1.png"
+                src="./gallery/img/aqua/aqua1.jpg"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -195,7 +223,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img2.png"
+                src="./gallery/img/aqua/aqua2.JPG"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -209,7 +237,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img3.png"
+                src="./gallery/img/aqua/aqua3.JPG"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -223,7 +251,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img4.png"
+                src="./gallery/img/aqua/aqua4.JPG"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -237,7 +265,7 @@
           <div class="swiper-slide">
             <article class="gallery__card">
               <img
-                src="./gallery/img/img5.png"
+                src="./gallery/img/aqua/aqua5.JPG"
                 alt="image gallery"
                 class="gallery__img"
               />
@@ -257,7 +285,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img1.png"
+                  src="./gallery/img/aqua/aqua1.jpg"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -267,7 +295,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img2.png"
+                  src="./gallery/img/aqua/aqua2.JPG"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -277,7 +305,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img3.png"
+                  src="./gallery/img/aqua/aqua3.JPG"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -287,7 +315,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img4.png"
+                  src="./gallery/img/aqua/aqua4.JPG"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
@@ -297,7 +325,7 @@
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
                 <img
-                  src="./gallery/img/img5.png"
+                  src="./gallery/img/aqua/aqua5.JPG"
                   alt=""
                   class="gallery__thumbnail-img"
                 />
