--- a/gratitude.html
+++ b/gratitude.html
@@ -17,15 +17,16 @@
     <link rel="stylesheet" href="./gallery/css/styles.css" />
     <link rel="stylesheet" href="./gallery/css/drk.css" />
 
-    <title>Gallery deeksha</title>
+    <title>Gratitude deeksha</title>
   </head>
   <body>
     <!-- text -->
     <main class="main">
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
-        <h2 class="section__title">The Desh Ka Rakhwaala initiative lorem20</h2>
-        <span class="section__subtitle">Gratitude to the armed forces</span>
+        <h2 class="section__title">Gratitude</h2>
+        <span class="section__subtitle">"We learned about gratitude and humility... that so many had a hand in our success" - Michelle Obama 
+</span>
         <div class="about__container container grid">
           <img src="./gallery/img/gratitude/gratitude.jpg" alt="" class="about__img" />
 
@@ -34,7 +35,8 @@
               The event of Gratitude Day received active funds making it the Student Council’s one of most successful fundraisers throughout our journey. We often fail to notice the importance of the role played by the non-teaching staff such as the housekeeping, motor drivers and other ground workers who work relentlessly each day. The council took the initiative to arrange and serve lunch to the department as a token of heartfelt gratitude for their toil. Besides, to let them have a day off, several fun activities were planned out - Rangoli Competition, Kite Flying and other games. 
 Several review meets were conducted to keep track of the contributions. The total collections hit a net amount of rupees 48,000+. Moreover, with the surplus funds, we arranged small gifts for the staff as well. 
 Students were widely encouraged to donate their share of funds and received tremendous cooperation from them. 
-The non-teaching staff cherished the day and showered the council with blessings.  
+The non-teaching staff cherished the day and showered the council with blessings. It was a colourful sight.
+
 
             </p>
             <!-- <div class="about__info">
@@ -60,18 +62,18 @@ The non-teaching staff cherished the day and showered the council with blessings
                 >
               </div>
             </div> -->
-            <div class="about__buttons">
+            <!-- <div class="about__buttons">
               <a
                 download=""
                 href="./assets/pdf/Alexa-Cv.pdf"
                 class="button button--flex"
                 >Download CV<i class="uil uil-download-alt button__icon"></i
               ></a>
-            </div>
+            </div> -->
           </div>
         </div>
 
-        <div class="text__container">
+        <!-- <div class="text__container">
           <p class="about__description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque rerum
             laudantium minus dolorem quibusdam maiores nam illo nulla totam. Quo
@@ -80,7 +82,7 @@ The non-teaching staff cherished the day and showered the council with blessings
             deleniti consequatur aliquid, iste placeat, ut vitae enim quasi
             suscipit sequi incidunt optio?
           </p>
-        </div>
+        </div> -->
 
         
       </section>
