--- a/index.html
+++ b/index.html
@@ -620,6 +620,31 @@ to be taken for a cause.
               </div>
             </div>
 
+
+            <!-- ================ PORTFOLIO 5=========================== -->
+
+            <div class="portfolio__content grid swiper-slide">
+                <img
+                src="/gallery/img/gratitude/gratitude.jpg"
+                alt=""
+                class="portfolio__img"
+              />
+             
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Community</h3>
+                <p class="portfolio__description">
+                  With the paradigm shift towards the digital world during and post the pandemic, it was a great experience to inculcate the same in a rural and underlying area of my state.
+                </p>
+                <a
+                  href="./community.html"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Sneek peek
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
           </div>
 
           <!-- Add Arrows -->
