--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#portfolio" class="nav__link">
+              <a href="#qualification" class="nav__link">
                 <i class="uil uil-file-alt nav__icon"></i>Qualification
               </a>
             </li>
@@ -78,9 +78,9 @@
           </ul>
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
+        <!-- Theme Change -->
         <div class="nav__btns">
-          <!-- Theme Change -->
-          <i class="uil uil-moon change-theme" id="theme-button"></i>
+          <!-- <i class="uil uil-moon change-theme" id="theme-button"></i> -->
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -173,7 +173,7 @@ to be taken for a cause.
         <h2 class="section__title">About me</h2>
         <span class="section__subtitle">My introduction</span>
         <div class="about__container container grid">
-          <img src="./assets/img/aqua/1.svg" alt="" class="about__img" />
+          <img src="./gallery/img/aqua/1.svg" alt="" class="about__img" />
           
           <div class="about__data">
             <p class="about__description">
@@ -211,7 +211,7 @@ to be taken for a cause.
             <div class="about__buttons">
               <a
                 download=""
-                href="./assets/pdf/Alexa-Cv.pdf"
+                href="./assets/img/RESUME-DEEKSHA.pdf"
                 class="button button--flex"
                 >Download CV<i class="uil uil-download-alt button__icon"></i
               ></a>
@@ -386,7 +386,7 @@ to be taken for a cause.
       </section>
 
       <!--==================== QUALIFICATION ====================-->
-      <section class="qualification section">
+      <section class="qualification section" id="qualification">
         <h2 class="section__title">Qualification</h2>
         <span class="section__subtitle">My personal journey</span>
         <div class="qualification__container container">
@@ -532,7 +532,7 @@ to be taken for a cause.
 
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="./assets/img/aqua/1.svg"
+                src="./gallery/img/aqua/1.svg"
                 alt=""
                 class="portfolio__img"
               />
@@ -544,6 +544,7 @@ to be taken for a cause.
                 <a
                   href="gallery.html"
                   class="button button--flex button--small portfolio__button"
+                  target="_blank"
                 >
                   Sneek peek
                   <i class="uil uil-arrow-right button__icon"></i>
@@ -567,6 +568,7 @@ to be taken for a cause.
                 <a
                   href="drk.html"
                   class="button button--flex button--small portfolio__button"
+                  target="_blank"
                 >
                   Sneek peek
                   <i class="uil uil-arrow-right button__icon"></i>
@@ -590,6 +592,7 @@ to be taken for a cause.
                 <a
                   href="editorial.html"
                   class="button button--flex button--small portfolio__button"
+                  target="_blank"
                 >
                   Sneek peek
                   <i class="uil uil-arrow-right button__icon"></i>
@@ -612,7 +615,7 @@ to be taken for a cause.
                 </p>
                 <a
                   href="gratitude.html"
-                  class="button button--flex button--small portfolio__button"
+                  class="button button--flex button--small portfolio__button" target="_blank"
                 >
                   Sneek peek
                   <i class="uil uil-arrow-right button__icon"></i>
@@ -625,7 +628,7 @@ to be taken for a cause.
 
             <div class="portfolio__content grid swiper-slide">
                 <img
-                src="/gallery/img/gratitude/gratitude.jpg"
+                src="/gallery/img/community/community1.jpg"
                 alt=""
                 class="portfolio__img"
               />
@@ -637,7 +640,7 @@ to be taken for a cause.
                 </p>
                 <a
                   href="./community.html"
-                  class="button button--flex button--small portfolio__button"
+                  class="button button--flex button--small portfolio__button" target="_blank"
                 >
                   Sneek peek
                   <i class="uil uil-arrow-right button__icon"></i>
@@ -782,7 +785,10 @@ to be taken for a cause.
             </a>
           </div>
         </div>
-        <p class="footer__copy">&#169; KB. Made with love ❤ !</p>
+        <a href="https://www.linkedin.com/in/barenya-kumar-panda/">
+
+          <p class="footer__copy">&#169; KB. Made with love <span style="color: red;">❤ </span>! </p>
+        </a>
       </div>
     </footer>
 
