--- a/aquaphonics.html
+++ b/aquaphonics.html
@@ -44,7 +44,7 @@
           <ul class="nav__list grid">
             <li class="nav__item">
               <a href="#home" class="nav__link" active-link>
-                <i class="uil uil-estate nav__icon"></i>MODEL UNITED NATIONS
+                <i class="uil uil-estate nav__icon"></i>AQUA PHONICS 
 
               </a>
             </li>
@@ -111,8 +111,8 @@ A detailed account of growth, analysis and comparison with other farming methods
 
       <!--==================== PORTFOLIO ====================-->
       <section class="portfolio section" id="portfolio">
-        <!-- <h2 class="section__title">Student Council</h2>
-        <span class="section__subtitle">Experiences from high school...</span> -->
+         <h2 class="section__title">Reports over the weeks..</h2>
+        <!-- <span class="section__subtitle">Experiences from high school...</span>  -->
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
