--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <p class="about__description">
               I am Deeksha Patnam, an international undergraduate applicant. As a student, I will be an all-seeking eye for knowledge, forever in the pursuit of new skills. The art of writing gets the best of me.  I believe writing is one of the most beautiful ways of expression ever brought into creation. It is not until a palette is laid on the tripod and paints wildly touch the canvas, that a masterpiece is made. Much likely, change begins with a single step and that step is to be taken for a cause. I wish to harness the knowledge I acquire to its fullest, and render it for betterment.
             </p>
-            <div class="about__info">
+            <!-- <div class="about__info">
               <div>
                 <span class="about__info-title">03+</span>
                 <span class="about__info-name"
@@ -199,7 +199,7 @@
                   recieved</span
                 >
               </div>
-            </div> 
+            </div>  -->
             <div class="about__buttons">
               <a
                 download=""
@@ -245,7 +245,7 @@
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">High School</h3>
-                  <span class="qualification__subtitle">AMSPORPS,Hyd,India - 500035</span>
+                  <span class="qualification__subtitle">AMSPORPS, Hyd<br> India 500035</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     June 2020 - August 2022
@@ -267,7 +267,7 @@
 
                 <div>
                   <h3 class="qualification__title">School</h3>
-                  <span class="qualification__subtitle">BVBPSJH,Hyd,India - 500096</span>
+                  <span class="qualification__subtitle">BVBPSJH, Hyd <br>India  500096</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     June 2008 - March 2020
@@ -538,7 +538,7 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Student Council</h3>
+                <h3 class="portfolio__title">The Student Council</h3>
                 <p class="portfolio__description">
                   REINVENTING GROWTH WITH AQUA LIFE.
                 </p>
@@ -563,9 +563,9 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Metaverse</h3>
+                <h3 class="portfolio__title">The Metaverse</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Life and beyond
                 </p>
                 <a
                   href="./metaverse.html"
@@ -590,7 +590,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Model UN</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Making diplomacy matter
                 </p>
                 <a
                   href="./mun.html"
@@ -643,7 +643,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Community Service</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  A gadget in everyone's hand
                 </p>
                 <a
                   href="./community.html"
@@ -666,9 +666,9 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Hamlet</h3>
+                <h3 class="portfolio__title">Drama: Tragedy</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  The care of emotions
                 </p>
                 <a
                   href="./hamlet.html"
@@ -693,7 +693,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Swachagraha</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Call for a clean nation
                 </p>
                 <a
                   href="./swach.html"
@@ -756,14 +756,14 @@
 
         <div class="contact__container container grid">
           <div>
-            <div class="contact__information">
+            <!-- <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
               <div>
                 <h3 class="contact__title">Phone</h3>
                 <span class="contact__subtitle">+91 9618179011
 </span>
               </div>
-            </div>
+            </div> -->
 
             <div class="contact__information">
               <i class="uil uil-envelope contact__icon"></i>
