--- a/metaverse.html
+++ b/metaverse.html
@@ -65,7 +65,7 @@
   <main class="main">
       <!--==================== ABOUT ====================-->
        <section class="about section" id="about">
-        <h2 class="section__title">METAVERSE </h2>
+        <h2 class="section__title">The Metaverse </h2>
         <!-- <span class="section__subtitle">My introduction</span> -->
         <div class="about__container container ">
           <!-- <img src="./gallery/img/aqua/1.svg" alt="" class="about__img" /> -->
@@ -161,7 +161,7 @@ An interest to delve deeper was enhanced as I encountered the perils; I wanted t
 
             <div class="portfolio__content  swiper-slide">
               <img
-                src="./gallery/img/metaverse/4.svg"
+                src="./gallery/img/metaverse/5.svg"
                 alt=""
                 class="portfolio__img"
               />
@@ -172,7 +172,7 @@ An interest to delve deeper was enhanced as I encountered the perils; I wanted t
 
             <div class="portfolio__content  swiper-slide">
               <img
-                src="./gallery/img/metaverse/4.svg"
+                src="./gallery/img/metaverse/6.svg"
                 alt=""
                 class="portfolio__img"
               />
