--- a/studentCouncil.html
+++ b/studentCouncil.html
@@ -42,13 +42,13 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
-              <a href="#home" class="nav__link" active-link>
+              <a href="#DKRInitiative" class="nav__link" active-link>
                 <i class="uil uil-estate nav__icon"></i>DKR Initiative
               </a>
             </li>
             <li class="nav__item">
               <a href="./editorial.html" class="nav__link" target="_blank">
-                <i class="uil uil-user nav__icon"></i>Editorial Board
+                <i class="uil uil-user nav__icon"></i>The Editorial Board
               </a>
             </li>
             <li class="nav__item">
@@ -79,15 +79,15 @@
 
       <!--==================== PORTFOLIO ====================-->
       <section class="portfolio section" id="portfolio">
-        <h2 class="section__title">Student Council</h2>
-        <span class="section__subtitle">Experiences from high school...</span>
+        <h2 class="section__title" style="margin-bottom: 2rem;">Student Council</h2>
+        <!-- <span class="section__subtitle">Experiences from high school...</span> -->
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
 
             <!-- ================ PORTFOLIO 1=========================== -->
 
-            <div class="portfolio__content  grid swiper-slide">
+            <div class="portfolio__content  grid swiper-slide" id="DKRInitiative">
               <img
                 src="./gallery/img/dkr.svg"
                 alt=""
@@ -96,10 +96,10 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">DKR Initiative</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Gratitude to the Armed forces
                 </p>
                 <a
-                  href="#"
+                  href="#DKRInitiative"
                   class="button button--flex button--small portfolio__button"
                 >
                   Sneek peek
@@ -118,9 +118,9 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Editorial Board</h3>
+                <h3 class="portfolio__title">The Editorial Board</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Unleashing literature in a newer form..
                 </p>
                 <a
                   href="./editorial.html"
@@ -145,7 +145,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Gratitude Day</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  Celebrating the unsung members
                 </p>
                 <a
                   href="./gratitude.html"
@@ -279,11 +279,11 @@ Duty</u></b>: Covert all kinds of formats into PDFs.
 		    </div>
       </div>
 
-      <div class="wrapper-iframe">
+      <!-- <div class="wrapper-iframe">
 		    <div class="iframe">
 			    <iframe src="./gallery/img/DRKimg2.pdf" /></iframe>
 		    </div>
-      </div>
+      </div> -->
 
 
       <div class="wrapper-iframe" >
