--- a/community.html
+++ b/community.html
@@ -68,7 +68,7 @@
        <section class="about section" id="about">
         <h2 class="section__title">COMMUNITY SERVICE
  </h2>
-        <span class="section__subtitle">MAKING DIPLOMACY MATTER</span>
+        <span class="section__subtitle">Tackling the major technological shift</span>
         <div class="about__container container ">
           <!-- <img src="./gallery/img/aqua/1.svg" alt="" class="about__img" /> -->
            <div class="about__data">
