--- a/metaverse.html
+++ b/metaverse.html
@@ -66,7 +66,8 @@
       <!--==================== ABOUT ====================-->
        <section class="about section" id="about">
         <h2 class="section__title">The Metaverse </h2>
-        <!-- <span class="section__subtitle">My introduction</span> -->
+        <h4 class="section__title" style="font-size: 16px;">Research</h4>
+        <span class="section__subtitle">Life and beyond</span>
         <div class="about__container container ">
           <!-- <img src="./gallery/img/aqua/1.svg" alt="" class="about__img" /> -->
            <div class="about__data">
