--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="./assets/img/RESUME-DEEKSHA.pdf"
+                href="https://drive.google.com/uc?id=1VyoN3FrhpUGgVmuAa3p-gPMsWcsZG0h2&export=download"
                 class="button button--flex"
-                >Download CV<i class="uil uil-download-alt button__icon"></i
+                >Download Resume<i class="uil uil-download-alt button__icon"></i
               ></a>
             </div>
           </div>
@@ -540,7 +540,7 @@
               <div class="portfolio__data">
                 <h3 class="portfolio__title">The Student Council</h3>
                 <p class="portfolio__description">
-                  REINVENTING GROWTH WITH AQUA LIFE.
+                  A change that is revolutionary
                 </p>
                 <a
                   href="./studentCouncil.html"
