--- a/studentCouncil.html
+++ b/studentCouncil.html
@@ -80,7 +80,7 @@
       <!--==================== PORTFOLIO ====================-->
       <section class="portfolio section" id="portfolio">
         <h2 class="section__title" style="margin-bottom: 2rem;">Student Council</h2>
-        <!-- <span class="section__subtitle">Experiences from high school...</span> -->
+        <span class="section__subtitle">A change that is revolutionary</span>
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
