--- a/hamlet.html
+++ b/hamlet.html
@@ -67,7 +67,7 @@
   <main class="main">
       <!--==================== ABOUT ====================-->
        <section class="about section" id="about">
-        <h2 class="section__title">THEATRE/DRAMA</h2>
+        <h2 class="section__title">William Shakespeare’s Hamlet</h2>
         <h4 class="section__title" style="font-size: 16px;">Drama: Tragedy</h4>
         <span class="section__subtitle">The core of emotions</span>
         <div class="about__container container ">
