--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Drama: Tragedy</h3>
+                <h3 class="portfolio__title">William Shakespeare’s Hamlet</h3>
                 <p class="portfolio__description">
-                  The care of emotions
+                  The core of emotions
                 </p>
                 <a
                   href="./hamlet.html"
